apps/linkItUp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkitup
  labels:
    app.kubernetes.io/part-of: linkItUp
