apps/linkItUp/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkitup-ui
  labels:
    app.kubernetes.io/name: linkitup-ui-ingress
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkitup.thatinsaneguy.com
      secretName: linkitup-tls
  rules:
    - host: linkitup.thatinsaneguy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkitup-ui
                port:
                  number: 9220
